--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.6",
+    "mongoose-auto-increment": "^5.0.1",
     "node-localstorage": "^2.1.5",
     "package.json": "^2.0.1",
     "passport": "^0.4.1",
