--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.8.6",
     "mongoose-auto-increment": "^5.0.1",
     "node-localstorage": "^2.1.5",
+    "nodemailer": "^6.4.16",
     "package.json": "^2.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
